[gd_scene load_steps=6 format=3 uid="uid://csecd0m0t0c2y"]

[ext_resource type="Script" path="res://systems/create_pet/create_pet.gd" id="1_jjidk"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://systems/pet/pet.tscn" id="2_yjn1a"]
[ext_resource type="PackedScene" uid="uid://dut2fm7cqngup" path="res://systems/misc/clickable/clickable_tab_item.tscn" id="3_odqlm"]
[ext_resource type="Script" path="res://systems/create_pet/show_item_create_pet.gd" id="4_21v8p"]
[ext_resource type="Script" path="res://systems/create_pet/create_pet_modal.gd" id="6_yjfel"]

[node name="Create_Pet" type="Node2D"]
script = ExtResource("1_jjidk")

[node name="Pet" parent="." instance=ExtResource("2_yjn1a")]
position = Vector2(296, 636)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 540.0
offset_bottom = 960.0
color = Color(0, 0.184314, 0.411765, 1)

[node name="Picker" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.153
anchor_top = 0.049
anchor_right = 0.847
anchor_bottom = 0.295
offset_left = -0.128006
offset_top = -0.176003
offset_right = 0.12796
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Picker"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Tab_Bodies" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_odqlm")]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Tab_Eyes" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_odqlm")]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Tab_Mouths" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_odqlm")]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Tab_Colors" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_odqlm")]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Picker"]
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Control/Picker/ScrollContainer"]
custom_minimum_size = Vector2(1000, 220)
layout_mode = 2
color = Color(0.0980392, 0.466667, 0.372549, 1)

[node name="Body_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_21v8p")

[node name="Eyes_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_21v8p")

[node name="Mouth_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_21v8p")

[node name="Color_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
script = ExtResource("4_21v8p")

[node name="Create_Pet_Modal" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.182
anchor_top = 0.231
anchor_right = 0.785
anchor_bottom = 0.444
offset_left = 0.167992
offset_top = 0.455994
offset_right = -0.160004
offset_bottom = 0.343964
grow_horizontal = 2
grow_vertical = 2
color = Color(0.169583, 0.190176, 0.210148, 1)
script = ExtResource("6_yjfel")
metadata/_edit_group_ = true

[node name="TextEdit" type="TextEdit" parent="Control/Create_Pet_Modal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -22.0
offset_right = 105.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Create_Pet_Modal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -59.0
offset_right = 20.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "NAME YOUR PET"

[node name="Button" type="Button" parent="Control/Create_Pet_Modal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -68.0
offset_right = 49.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "Create Pet!"

[node name="Submit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.694
anchor_top = 0.928
anchor_right = 0.901
anchor_bottom = 0.969
offset_left = 0.255981
offset_top = -0.272034
offset_right = 0.0239868
offset_bottom = -0.256042
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
text = "OK"

[connection signal="button_up" from="Control/Create_Pet_Modal/Button" to="Control/Create_Pet_Modal" method="_on_create_pet_button_up"]
[connection signal="pressed" from="Control/Submit" to="." method="_on_submit_pressed"]
